--- a/divya1.html
+++ b/divya1.html
@@ -8,7 +8,43 @@
 /* Global Styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f0f0f0; /* Light gray background */
+  background-color: #<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Styled Page</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Global Styles */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: # FFCOCB; /* Light gray background */
+  color: #333; /* Dark gray text color */
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  color: #0077cc; /* Blue heading */
+  text-align: center;
+}
+
+p {
+  color: #555; /* Dark gray paragraph text */
+  font-size: 18px;
+  line-height: 1.6;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<h1>My Beautiful Website</h1>
+<p>Welcome to my creatively designed website.</p>
+
+</body>
+</html>
+; /* Light gray background */
   color: #333; /* Dark gray text color */
   margin: 0;
   padding: 20px;
