--- a/divya1.html
+++ b/divya1.html
@@ -18,7 +18,7 @@ body {
 /* Global Styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: # FFCOCB; /* Light gray background */
+  background-color: # 655D5B ; /* Light gray background */
   color: #333; /* Dark gray text color */
   margin: 0;
   padding: 20px;
