--- a/d1.html
+++ b/d1.html
@@ -8,19 +8,19 @@
 /* Global Styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(135deg, #3494e6, #ec6ead); /* Gradient background */
-  color: #333; /* Dark gray text color */
+  background-color: #f38181; /* Light coral background */
+  color: #fff; /* White text color */
   margin: 0;
   padding: 20px;
 }
 
 h1 {
-  color: #ffffff; /* White heading text */
+  color: #ffd166; /* Yellow heading text */
   text-align: center;
 }
 
 p {
-  color: #ffffff; /* White paragraph text */
+  color: #f4a261; /* Light orange paragraph text */
   font-size: 18px;
   line-height: 1.6;
   text-align: center;
@@ -45,3 +45,5 @@ p {
 
 </body>
 </html>
+
+  
