--- a/D1.html
+++ b/D1.html
@@ -39,8 +39,8 @@ p {
 <body>
 
 <div class="container">
-  <h1>My Beautiful Website</h1>
-  <p>Welcome to my creatively designed website.</p>
+  <h1>welcome</h1>
+  <p>first day of my launchpad </p>
 </div>
 
 </body>
